--- a/package.json
+++ b/package.json
@@ -29,19 +29,8 @@
     "url": "https://github.com/ShankyTiwari/ng-navigator-share/issues"
   },
   "dependencies": {
-    "@angular/animations": "^9.1.4",
-    "@angular/common": "^9.1.4",
-    "@angular/compiler": "^9.1.4",
-    "@angular/core": "^9.1.4",
-    "@angular/forms": "^9.1.4",
-    "@angular/http": "^7.2.16",
-    "@angular/platform-browser": "^9.1.4",
-    "@angular/platform-browser-dynamic": "^9.1.4",
-    "@angular/router": "^9.1.4",
     "core-js": "^2.5.0",
-    "rxjs": "^6.5.5",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "rxjs": "^6.5.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.4",
